Archive2/19/78feee3a09fd82/output
main.cpp:3:16: error: explicitly assigning value of variable of type 'int' to itself [-Werror,-Wself-assign]
  X(int i) { i = i; }
             ~ ^ ~
1 error generated.
