Archive2/19/78feee3a09fd82/main.cpp
struct X
{
  X(int i) { i = i; }
  int i;
};

int main() {    
    X x(42);
    return 0;
}